--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "private": true,
   "dependencies": {
     "angular": "^1.3.15",
+    "angular-socialshare": "^0.1.14",
     "angularfire": "^1.0.0",
     "grunt": "^0.4.5"
   },
@@ -17,8 +18,7 @@
     "http-server": "^0.6.1",
     "karma-jasmine": "^0.3.6"
   },
-
-"scripts": {
+  "scripts": {
     "prestart": "npm install",
     "start": "http-server -a 0.0.0.0 -p 8000"
   }
