--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "angular": "^1.3.15",
     "angular-socialshare": "^0.1.14",
     "angularfire": "^1.0.0",
-    "grunt": "^0.4.5"
+    "grunt": "^0.4.5",
+    "textangular": "^1.4.6"
   },
   "devDependencies": {
     "grunt-contrib-jshint": "^0.11.2",
